# Namica

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FetchThirdparty.ps1  LICENSE  README.md
doc/: HelloWorld.md
doc/life/: 梦的开端.md
doc/opengl/: api.md  shader.md
editor/: CMakeLists.txt
editor/src/: Main.cpp
namica/: CMakeLists.txt
namica/src/namica/: EntryPoint.h
namica/src/namica/core/: Application.cpp  Application.h  ApplicationConfig.h  Base.h  Input.h  InputCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Logger.cpp  Logger.h  Macros.h  Memory.h  Time.cpp  Time.h  Timer.h  TypeMacros.h  UUID.cpp  UUID.h  Window.h  WindowConfig.h
namica/src/namica/events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
namica/src/namica/imgui/: ImGuiImpl.cpp  ImGuiImpl.h  ImGuiLayer.cpp  ImGuiLayer.h
namica/src/namica/renderer/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  RendererConfig.h  RendererContext.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
namica/src/namica/scene/: Component.cpp  Component.h  Components.h  Entity.cpp  Entity.h  EntityIterator.cpp  EntityIterator.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  ScriptableEntity.h
namica/src/namica/utilities/: FileSystem.cpp  FileSystem.h
namica/src/platform/glfw/: GlfwImGuiImpl.cpp  GlfwImGuiImpl.h  GlfwInput.cpp  GlfwWindow.cpp  GlfwWindow.h
namica/src/platform/opengl/: OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLImGuiImpl.cpp  OpenGLImGuiImpl.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
namica_editor/: CMakeLists.txt
namica_editor/assets/shaders/: Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_QuadTexture.glsl
namica_editor/src/: Editor.cpp
namica_editor/src/namica_editor/: Editor.cpp  EditorActions.cpp  EditorActions.h  EditorContext.h  EditorLayer.cpp  EditorLayer.h  EditorMainUI.cpp  EditorMainUI.h
namica_editor/src/namica_editor/panel/: EditorPanel.h  InfoPanel.cpp  InfoPanel.h  InspectorPanel.cpp  InspectorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
runtime/: CMakeLists.txt
runtime/include/namica/: Base.h  Common.h  Engine.h  Test.h
runtime/include/namica/math/: Constants.h  Matrix.h  Matrix.inl  Quaternion.h  Quaternion.inl  Utils.h  Utils.inl  Vector.h  Vector.inl
runtime/src/: Engine.cpp  Test.cpp
runtime/src/math/: Matrix.cpp  Vector.cpp
scripts/: SetupVulkan.py
src/: CMakeLists.txt  Main.cpp  TestMain.cpp  test_main.cpp
src/common/: application.cpp  application.h  time.hpp
src/editor/: editor_app.h
src/example/: sdl2_imgui_test.cpp
tests/: CMakeLists.txt
tests/playground/: CMakeLists.txt
tests/playground/snake_game/: CMakeLists.txt  TestSnakeGame.cpp
tests/playground/window_render/: CMakeLists.txt  GlfwOpengl.cpp  GlfwOpengl.h  HelloWorld.cpp  TestCubeRender.cpp  TestWindowRender.cpp
tests/runtime/: CMakeLists.txt  TestMain.cpp
tests/runtime/math/: TestMatrix.cpp  TestQuaternion.cpp
tests/runtime/my_test/: TestTest.cpp
tests/runtime/utils/: TestUtils.cpp  TestUtils.h
